# nqueens

./: README.rst  pyproject.toml
nqueens/: nqueens.py
tests/: test_nqueens.py
