[tool.poetry]
name = "nqueens"
version = "0.1.0"
description = ""
authors = ["Aaron Ash <aaron.ash@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
networkx = "^2.6.3"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
